--- a/src/pages/farmer/sign-up/sign-up.html
+++ b/src/pages/farmer/sign-up/sign-up.html
@@ -59,4 +59,11 @@
       <button ion-button color="light" (click)="navigateLoginPage()">Login</button>
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col></ion-col>
+    <ion-col>
+      <button ion-button color="light" (click)="navigateHomePage()">Home</button>
+    </ion-col>
+    <ion-col></ion-col>
+  </ion-row>
 </ion-content>
