Home page ui changed

--- a/src/pages/farmer/contact/contact.html
+++ b/src/pages/farmer/contact/contact.html
@@ -1,17 +1,125 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Contact
+    <ion-title text-center>
+      Contacts
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+
+  <!--Venkatesh-->
+  <ion-card>
+    <ion-row>
+      <ion-col col-3>
+        <ion-avatar item-start>
+          <img src="assets/icon/venkatesh.jpg">
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <div style="font-weight: bold">Venkatesh L</div>
+        <div>B. Tech. (Horticulture)</div>
+        <div>Senior Crop Adviser</div>
+        <div>+91 8111010653</div>
+        <div>lvenkatesh94@gmail.com</div>
+      </ion-col>
+    </ion-row>
+    <hr>
+    <ion-row>
+      <ion-col offset-2 href="'tel: 9578657094'">
+        <ion-row >
+          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
+        </ion-row>
+        <ion-row text-center>
+          Call
+        </ion-row>
+      </ion-col>
+      <ion-col offset-2 href="mailto:lvenkatesh94@gmail.com" text-center>
+        <ion-row>
+        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
+        </ion-row>
+        <ion-row>
+         E-Mail
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+
+  <!--Mohan Ram-->
+  <ion-card>
+    <ion-row>
+      <ion-col col-3>
+        <ion-avatar item-start>
+          <img src="assets/icon/mohan_ram.jpg">
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <div style="font-weight: bold">Mohan Ram</div>
+        <div>B.Sc. (Horticulture) </div>
+        <div>Crop Adviser</div>
+
+        <div>+91 6381234018</div>
+        <div>mohanram1996@gmail.com</div>
+        <div></div>
+      </ion-col>
+    </ion-row>
+    <hr>
+    <ion-row>
+      <ion-col offset-2 href="'tel: 95786 57094'">
+        <ion-row >
+          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
+        </ion-row>
+        <ion-row text-center>
+          Call
+        </ion-row>
+      </ion-col>
+      <ion-col offset-2 href="mailto:mohanram1996@gmail.com" text-center>
+        <ion-row>
+        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
+        </ion-row>
+        <ion-row>
+         E-Mail
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+
+  <!--Tech Adviser-->
+  <ion-card>
+    <ion-row>
+      <ion-col col-3>
+        <ion-avatar item-start>
+          <img src="assets/icon/boobalan.jpg">
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <div style="font-weight: bold">Boobalan</div>
+        <div>B. Tech. (AIT) </div>
+        <div>Technical Expert</div>
+
+        <div>+91 9677332085</div>
+        <div>mboobalan1997@gmail.com</div>
+        <div></div>
+      </ion-col>
+    </ion-row>
+    <hr>
+    <ion-row>
+      <ion-col offset-2 href="'tel: 95786 57094'">
+        <ion-row >
+          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
+        </ion-row>
+        <ion-row text-center>
+          Call
+        </ion-row>
+      </ion-col>
+      <ion-col offset-2 href="mailto:mboobalan1997@gmail.com" text-center>
+        <ion-row>
+        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
+        </ion-row>
+        <ion-row>
+         E-Mail
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 </ion-content>
