--- a/src/pages/query-history/query-history.html
+++ b/src/pages/query-history/query-history.html
@@ -8,15 +8,50 @@
 
 
 <ion-content padding>
-  <accordion-list *ngFor="let date of query_keys; let index = index" [title]="date" textColor="#FFF" hasMargin="false"
-    headerColor="#F53D3D" [expanded]="index === 0">
+  <!--<accordion-list *ngFor="let date of query_keys; let index = index" [title]="date" textColor="#FFF" hasMargin="false"-->
+    <!--headerColor="#F53D3D" [expanded]="index === 0">-->
+    <!--<ion-list>-->
+      <!--<ion-item *ngFor="let query of query_history[date]">-->
+        <!--<ion-avatar item-start>-->
+          <!--<img alt='image' src="assets/icon/crop1.jpeg">-->
+        <!--</ion-avatar>-->
+        <!--<h3>{{query['crop']['name']}}</h3>-->
+        <!--<h3 style="margin-top: 5px">Reco 1: </h3>-->
+        <!--<h3 style="margin-top: 5px">Reco 2: </h3>-->
+        <!--<h3>Reco 3: </h3>-->
+        <!--<h3>Reco 4: </h3>-->
+      <!--</ion-item>-->
+    <!--</ion-list>-->
+  <!--</accordion-list>-->
+
+
+
+
+  <accordion-list title="12-07-2018" textColor="#FFF" hasMargin="false" headerColor="#F4511E">
     <ion-list>
-      <ion-item *ngFor="let query of query_history[date]">
+      <ion-item>
         <ion-avatar item-start>
-          <img alt='image'>
+          <img alt='image' src="assets/icon/crop1.jpeg">
         </ion-avatar>
-        <h3>{{query['crop']['name']}}</h3>
+        <h3>Paddy</h3>
+        <h3 style="margin-top: 10px">Reco 1: </h3>
+        <h3 style="margin-top: 10px">Reco 2: </h3>
       </ion-item>
     </ion-list>
   </accordion-list>
+
+  <accordion-list title="11-07-2018" textColor="#FFF" hasMargin="false" headerColor="#F4511E">
+    <ion-list>
+      <ion-item>
+        <ion-avatar item-start>
+          <img alt='image' src="assets/icon/tomato.jpg">
+        </ion-avatar>
+        <h3>Tomato</h3>
+        <h3 style="margin-top: 10px">Reco 1: </h3>
+        <h3 style="margin-top: 10px">Reco 2: </h3>
+        <h3 style="margin-top: 10px">Reco 3: </h3>
+      </ion-item>
+    </ion-list>
+  </accordion-list>
+
 </ion-content>
