--- a/src/pages/farmer/login/login.html
+++ b/src/pages/farmer/login/login.html
@@ -70,5 +70,5 @@
   <p style="text-align: center">
    Don't Have an Account?
   </p>
-  <button ion-button (click)="routeTabPage()"> Tab </button>
+  <!-- <button ion-button (click)="routeTabPage()"> Tab </button> -->
 </ion-content>
