resouces and contact page modified

--- a/src/pages/farmer/contact/contact.html
+++ b/src/pages/farmer/contact/contact.html
@@ -26,21 +26,25 @@
     </ion-row>
     <hr>
     <ion-row>
-      <ion-col offset-2 href="'tel: 9578657094'">
-        <ion-row >
-          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
-        </ion-row>
-        <ion-row text-center>
-          Call
-        </ion-row>
+      <ion-col offset-2>
+        <a href="tel: 9578657094" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="phone-portrait"></ion-icon>
+          </ion-row>
+          <ion-row text-center>
+            Call
+          </ion-row>
+        </a>
       </ion-col>
-      <ion-col offset-2 href="mailto:lvenkatesh94@gmail.com" text-center>
-        <ion-row>
-        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
-        </ion-row>
-        <ion-row>
-         E-Mail
-        </ion-row>
+      <ion-col offset-2 text-center>
+        <a href="mailto:lvenkatesh94@gmail.com" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="mail"></ion-icon>
+          </ion-row>
+          <ion-row>
+            E-Mail
+          </ion-row>
+        </a>
       </ion-col>
     </ion-row>
   </ion-card>
@@ -65,21 +69,25 @@
     </ion-row>
     <hr>
     <ion-row>
-      <ion-col offset-2 href="'tel: 95786 57094'">
-        <ion-row >
-          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
-        </ion-row>
-        <ion-row text-center>
-          Call
-        </ion-row>
+      <ion-col offset-2>
+        <a href="tel: 6381234018" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="phone-portrait"></ion-icon>
+          </ion-row>
+          <ion-row text-center>
+            Call
+          </ion-row>
+        </a>
       </ion-col>
-      <ion-col offset-2 href="mailto:mohanram1996@gmail.com" text-center>
-        <ion-row>
-        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
-        </ion-row>
-        <ion-row>
-         E-Mail
-        </ion-row>
+      <ion-col offset-2 text-center>
+        <a href="mailto:mohanram1996@gmail.com" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="mail"></ion-icon>
+          </ion-row>
+          <ion-row>
+            E-Mail
+          </ion-row>
+        </a>
       </ion-col>
     </ion-row>
   </ion-card>
@@ -104,21 +112,25 @@
     </ion-row>
     <hr>
     <ion-row>
-      <ion-col offset-2 href="'tel: 95786 57094'">
-        <ion-row >
-          <ion-icon style="font-size: 25px; color: #F4511E" name="phone-portrait"></ion-icon>
-        </ion-row>
-        <ion-row text-center>
-          Call
-        </ion-row>
+      <ion-col offset-2>
+        <a href="tel: 9677332085" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="phone-portrait"></ion-icon>
+          </ion-row>
+          <ion-row text-center>
+            Call
+          </ion-row>
+        </a>
       </ion-col>
-      <ion-col offset-2 href="mailto:mboobalan1997@gmail.com" text-center>
-        <ion-row>
-        <ion-icon style="font-size: 25px; color: #F4511E" name="mail"></ion-icon>
-        </ion-row>
-        <ion-row>
-         E-Mail
-        </ion-row>
+      <ion-col offset-2 text-center>
+        <a href="mailto:mboobalan1997@gmail.com" style="text-decoration: none; color:black">
+          <ion-row>
+            <ion-icon style="font-size: 25px; color: #F4511E; margin-left: 2px;" name="mail"></ion-icon>
+          </ion-row>
+          <ion-row>
+            E-Mail
+          </ion-row>
+        </a>
       </ion-col>
     </ion-row>
   </ion-card>
