tamil translation included

--- a/src/pages/query-history/query-history.html
+++ b/src/pages/query-history/query-history.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>query-history</ion-title>
+    <ion-title>{{'Advisory' | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
