--- a/src/pages/farmer/contact/contact.html
+++ b/src/pages/farmer/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title text-center>
-      Contacts
+      {{'Contact' | translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
