--- a/src/pages/farmer/home/home.html
+++ b/src/pages/farmer/home/home.html
@@ -5,36 +5,47 @@
         <ion-title>Kultivate <span style="color: #F4511E">Life</span></ion-title>
       </ion-col>
       <ion-col offset-3 col-3>
-        <span (click)="logout()" style="color: #40C4FF; font-weight: bold">Logout</span>
+        <span (click)="logout()" style="color: #40C4FF; font-weight: bold; margin-right: 5px;">{{'Logout' | translate}}</span>
       </ion-col>
     </ion-row>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
+  <ion-row>
+    <ion-col>
+      <ion-label text-center>{{'Select Language' | translate}}</ion-label>
+    </ion-col>
+    <ion-col style="margin-top: 10px;">
+      <span (change)="setDefaultLanguage(langSelect.value)">
+        <select #langSelect (change)="translate.use(langSelect.value)">
+          <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+        </select>
+      </span>
+    </ion-col>
+  </ion-row>
   <ion-card style="padding: 5px; font-weight: bold; border-radius: 4px">
-    Please take closeup photos of the symptom and send it for expert advise.
+    {{'Please take closeup photos of the symptom and send it for expert advise.' | translate}}
   </ion-card>
 
   <ion-row>
     <ion-col>
       <ion-card class="custom-input">
         <select [(ngModel)]="crop_id">
-          <option *ngFor="let crop of crops" [value]="crop.id">{{crop.name}}</option>
+          <option *ngFor="let crop of crops" [value]="crop.id">{{crop.name | translate}}</option>
         </select>
         <!--<ion-select [(ngModel)]="crop_id" interface="popover" placeholder="Crop" style="padding: 0px">-->
           <!--<ion-option *ngFor="let crop of crops" [value]="crop.id">{{ crop.name }}</ion-option>-->
         <!--</ion-select>-->
 
       </ion-card>
-              <ion-label text-center>Crop</ion-label>
-
+      <ion-label text-center>{{'Crop' | translate}}</ion-label>
     </ion-col>
     <ion-col>
       <ion-card class="custom-input">
-        <input [(ngModel)]="age_of_crop" text-center placeholder='Age in days' type="number">
+        <input [(ngModel)]="age_of_crop" text-center placeholder="{{'Age in days' | translate}}" type="number">
       </ion-card>
-      <ion-label text-center>Age of the crop</ion-label>
+      <ion-label text-center>{{'Age of the crop' | translate}}</ion-label>
     </ion-col>
   </ion-row>
 
@@ -62,7 +73,7 @@
   <ion-card class="custom-input">
   <ion-item>
     <!--<ion-label floating>Notes</ion-label>-->
-    <textarea elastic style="color:black; line-height:normal; height:100%; width: 100%" [(ngModel)]="notes" placeholder="Notes"></textarea>
+    <textarea elastic style="color:black; line-height:normal; height:100%; width: 100%" [(ngModel)]="notes" placeholder="{{'Notes' | translate}}"></textarea>
   </ion-item>
   <!--<ion-item>-->
     <!--<ion-label floating>Notes</ion-label>-->
@@ -83,7 +94,7 @@
 
   <ion-card class="custom-button">
     <ion-row (click)="uploadQuery(crop_id, age_of_crop, notes, picture_array)">
-      <ion-col>Send
+      <ion-col>{{'Send' | translate}}
       </ion-col>
     </ion-row>
   </ion-card>
