working on advisor

--- a/src/pages/farmer/login/login.html
+++ b/src/pages/farmer/login/login.html
@@ -46,7 +46,7 @@
     <ion-col>
       <ion-item>
         <ion-label color="primary">OTP</ion-label>
-        <ion-input type="number" [(ngModel)]="otp" placeholder="642353"></ion-input>
+        <ion-input type="number" [(ngModel)]="otp"></ion-input>
       </ion-item>
     </ion-col>
     <ion-col>
