--- a/src/pages/farmer/sign-up/sign-up.html
+++ b/src/pages/farmer/sign-up/sign-up.html
@@ -103,7 +103,7 @@
     </ion-row>
   </ion-card>
 
-  <button ion-button (click)="routeToHistoryPage()"> history </button>
+  <!-- <button ion-button (click)="routeToHistoryPage()"> history </button> -->
 
   <p style="text-align: center">
     Already have an account?
